Changes for 1.3.0.1
* Fixes for various null pointer errors. (veqryn)

* New unit attachment setter, "unitPlacementOnlyAllowedIn", which is the direct inverse of "unitPlacementRestrictions". (veqryn)

* Fixed issue [bug 3294118] where transports drop their ground units in the ocean when they engage in combat. (veqryn)

* Added new global property, "On Entering Units Destroyed Instead Of Captured", which if true allows units normally captured on entering to be destroyed.  Does not affect non-combat units, only affects combat units with the canBeCapturedOnEnteringBy attachment. (veqryn)


Changes for 1.3.0.0
* Added the new username banning system, which will help a lot on the lobby. Like to ban offensive usernames without necessarily banning the player. (wisconsin)

* Another patch for Dynamix AI (wisconsin)

* Added airfield_disabled.png and harbour_disabled.png for all nations (veqryn)

* Flipped all unit graphics. All axis sea and air point left, while allies point right (except russian air points left).  All ground units for a country point same direction, left for japan and russia, right for everyone else. Non-combat units and aaGuns do not point any direction, or are same for all nations. (veqryn)

* Fixed Neutrals charge to work properly, without java errors, if the neutral is attacked and there is a battle. Will now display a message in history panel if there is not enough PUs to remove. (veqryn)

* Determine if units are 'disabled' and display a unique icon for them (ComradeKev)

* Initial work on Scrambling aircraft (ComradeKev)

* Fixed bug in StrongAI/MooreAI where it would never attack a player if it lost too much TUV, and the TUV calc thought the enemy had zero TUV. Also fixed bug where it calced for the offensive value of walk in territories, instead of defensive value. (veqryn)

* Added a global property, "Capture Units On Entering Territory", which if true allows units to be captured instead of fighting. (veqryn)
